name:                PoE
version:             0.1.0.0
license-file:        LICENSE
author:              Tohveli (Paska)
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     PoE.Parser
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.9,
                       parsec
  hs-source-dirs:      src
  default-language:    Haskell2010

executable PoE-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       PoE
  default-language:    Haskell2010
